k8s-yaml/innpro-repair/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innpro-repair-ingress
  namespace: innpro-repair
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: nginx
  rules:
  - host: innpro-repair.poweron.software
    http:
      paths:
      - backend:
          service:
            name: odoo
            port:
              number: 8069
        path: /
        pathType: Prefix
  - host: innpro-repair.poweron.software
    http:
      paths:
      - backend:
          service:
            name: odoo
            port:
              number: 8072
        path: /longpolling/
        pathType: Prefix
  tls:
  - hosts:
    - rec1.re-cloud.io
    secretName: innpro-repair-tls
